自己紹介文の編集

--- a/responsive.css
+++ b/responsive.css
@@ -96,6 +96,14 @@
   .contact-wrapper p{
     font-size: 16px;
   }
+  
+  .main-text {
+    font-size: 13px;
+  }
+  
+  .main-text2 {
+    font-size: 13px;
+  }
 
 }
 
